Selection Tookit package v1/retrieveOutput/objects/Textarea_Minimum_Chars__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>indicates the minimum characters for textarea in the interview page</description>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Chars__c</fullName>
        <label>Minimum Chars</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Page_Name__c</fullName>
        <label>Page Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Area_Id__c</fullName>
        <label>Text Area Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Textarea Minimum Chars</label>
</CustomObject>